# soldank-plus-plus

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
source/client/: CMakeLists.txt  main.cpp  stb.cpp
source/client/application/: Application.cpp  Application.hpp  ClientNetworkEventObserver.cpp  ClientNetworkEventObserver.hpp
source/client/application/cli/: CommandLineParameters.cpp  CommandLineParameters.hpp
source/client/application/config/: Config.hpp
source/client/application/input/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  PlayerInput.cpp  PlayerInput.hpp
source/client/application/window/: Window.cpp  Window.hpp
source/client/core/: World.cpp  World.hpp
source/client/core/entities/: Bullet.cpp  Bullet.hpp  Weapon.hpp  WeaponParameters.hpp  WeaponParametersFactory.cpp
source/client/core/map/: Map.cpp  Map.hpp  PMSConstants.hpp  PMSEnums.hpp  PMSStructs.hpp  Utils.cpp  Utils.hpp
source/client/core/math/: Calc.cpp  Calc.hpp
source/client/core/physics/: Bullet.cpp  Bullet.hpp  BulletPhysics.cpp  Particles.hpp  Soldier.cpp  Soldier.hpp  Weapons.cpp  Weapons.hpp
source/client/core/state/: Control.hpp  State.cpp  State.hpp
source/client/core/types/: BulletParams.hpp  WeaponGroupType.hpp
source/client/core/utility/: VisitHelper.hpp
source/client/networking/: Connection.cpp  Connection.hpp  IConnection.hpp  INetworkingClient.hpp  LagConnection.cpp  LagConnection.hpp  NetworkingClient.cpp  NetworkingClient.hpp
source/client/networking/event_handlers/: AssignPlayerIdNetworkEventHandler.cpp  AssignPlayerIdNetworkEventHandler.hpp  HitSoldierNetworkEventHandler.cpp  HitSoldierNetworkEventHandler.hpp  KillSoldierNetworkEventHandler.cpp  KillSoldierNetworkEventHandler.hpp  PingCheckNetworkEventHandler.cpp  PingCheckNetworkEventHandler.hpp  PlayerLeaveNetworkEventHandler.cpp  PlayerLeaveNetworkEventHandler.hpp  ProjectileSpawnNetworkEventHandler.cpp  ProjectileSpawnNetworkEventHandler.hpp  SoldierInfoNetworkEventHandler.cpp  SoldierInfoNetworkEventHandler.hpp  SoldierStateNetworkEventHandler.cpp  SoldierStateNetworkEventHandler.hpp  SpawnSoldierNetworkEventHandler.cpp  SpawnSoldierNetworkEventHandler.hpp
source/client/networking/interface/: NetworkingInterface.cpp  NetworkingInterface.hpp
source/client/rendering/: ClientState.hpp  Scene.cpp  Scene.hpp
source/client/rendering/components/: Camera.cpp  Camera.hpp
source/client/rendering/data/: Sprites.cpp  Sprites.hpp  Texture.cpp  Texture.hpp
source/client/rendering/renderer/: BackgroundRenderer.cpp  BackgroundRenderer.hpp  BulletRenderer.cpp  BulletRenderer.hpp  CircleRenderer.cpp  CircleRenderer.hpp  ItemRenderer.cpp  ItemRenderer.hpp  LineRenderer.cpp  LineRenderer.hpp  PolygonOutlinesRenderer.cpp  PolygonOutlinesRenderer.hpp  PolygonsRenderer.cpp  PolygonsRenderer.hpp  RectangleRenderer.cpp  RectangleRenderer.hpp  Renderer.cpp  Renderer.hpp  SceneriesRenderer.cpp  SceneriesRenderer.hpp  SoldierRenderer.cpp  SoldierRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
source/client/rendering/shaders/: Circle.fs  Circle.vs  DynamicColor.fs  DynamicColor.vs  DynamicColorNoTexture.fs  DynamicColorNoTexture.vs  Font.fs  Font.vs  NoTexture.fs  NoTexture.vs  Shader.cpp  Shader.hpp  ShaderSources.hpp  Standard.fs  Standard.vs
source/server/: CMakeLists.txt  main.cpp
source/server/application/: Application.cpp  Application.hpp  ServerState.hpp
source/server/networking/: CoreEventsConnectionNotifier.cpp  CoreEventsConnectionNotifier.hpp  GameServer.cpp  GameServer.hpp  IGameServer.hpp  LobbyClient.cpp  LobbyClient.hpp
source/server/networking/event_handlers/: KillCommandNetworkEventHandler.cpp  KillCommandNetworkEventHandler.hpp  PingCheckNetworkEventHandler.cpp  PingCheckNetworkEventHandler.hpp  SoldierInputNetworkEventHandler.cpp  SoldierInputNetworkEventHandler.hpp
source/server/networking/events/: ServerNetworkEventDispatcher.cpp  ServerNetworkEventDispatcher.hpp  ServerNetworkEventObserver.cpp  ServerNetworkEventObserver.hpp
source/server/networking/interface/: NetworkingInterface.cpp  NetworkingInterface.hpp
source/server/networking/poll_groups/: EntryPollGroup.cpp  EntryPollGroup.hpp  IPollGroup.hpp  PlayerPollGroup.cpp  PlayerPollGroup.hpp  PollGroupBase.cpp  PollGroupBase.hpp
source/server/networking/types/: Connection.hpp
source/server/scripting/: IScriptingEngine.hpp
source/server/scripting/dascript/: DaScriptInit.cpp  DaScriptInit.hpp  DaScriptScriptingEngine.cpp  DaScriptScriptingEngine.hpp
source/shared/: CMakeLists.txt
source/shared/communication/: NetworkEvent.hpp  NetworkEventDispatcher.cpp  NetworkEventDispatcher.hpp  NetworkMessage.hpp  NetworkPackets.hpp  PingTimer.cpp  PingTimer.hpp
source/shared/core/: CoreEventHandler.cpp  CoreEventHandler.hpp  IWorld.hpp  World.cpp  World.hpp  WorldEvents.hpp
source/shared/core/animations/: Animation.cpp  Animation.hpp  AnimationData.cpp  AnimationData.hpp  AnimationState.cpp  AnimationState.hpp
source/shared/core/config/: Config.hpp
source/shared/core/data/: FileReader.cpp  FileReader.hpp  IFileReader.hpp
source/shared/core/entities/: Bullet.cpp  Bullet.hpp  Item.hpp  Soldier.cpp  Soldier.hpp  Weapon.cpp  Weapon.hpp  WeaponParameters.hpp  WeaponParametersFactory.cpp  WeaponParametersFactory.hpp
source/shared/core/map/: Map.cpp  Map.hpp  PMSConstants.hpp  PMSEnums.hpp  PMSStructs.hpp
source/shared/core/math/: Calc.cpp  Calc.hpp  Glm.hpp
source/shared/core/physics/: BulletPhysics.cpp  BulletPhysics.hpp  Constants.hpp  ItemPhysics.cpp  ItemPhysics.hpp  Particles.cpp  Particles.hpp  PhysicsEvents.hpp  Soldier.cpp  Soldier.hpp  SoldierPhysics.cpp  SoldierPhysics.hpp  SoldierSkeletonPhysics.cpp  SoldierSkeletonPhysics.hpp
source/shared/core/state/: Control.hpp  State.cpp  State.hpp  (+2 more)
tests/client/: CMakeLists.txt  CalcTest.cpp
tests/shared/: CMakeLists.txt
tests/shared/communication/: NetworkEventDispatcherTest.cpp  NetworkMessageTest.cpp
tests/testing_frameworks/shared_lib_testing/: CMakeLists.txt  MapBuilder.cpp  MapBuilder.hpp
(+87 files in other folders)
